refactor to not return jvm beans
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1622658 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
@@ -20,7 +20,8 @@
     <abn-tree tree-data="treeData" on-select="selectionHandler(branch)"></abn-tree>
   </div>
   <div class="col-lg-9">
-    jmx detail: {{::mbean.description}}
+    <h1>{{::mbean.objectName}}</h1>
+    <h2>{{::mbean.classname}}</h2>
 
     <ul class="nav nav-tabs" role="tablist">
       <li class="active"><a href="#attributes" role="tab" data-toggle="tab">Attributes</a></li>
