display attributes and operations
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1623257 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
@@ -20,8 +20,8 @@
     <abn-tree tree-data="treeData" on-select="selectionHandler(branch)"></abn-tree>
   </div>
   <div class="col-lg-9">
-    <h1>{{::mbean.objectName}}</h1>
-    <h2>{{::mbean.classname}}</h2>
+    <h1>{{mbean.objectName}}</h1>
+    <h2>{{mbean.classname}}</h2>
 
     <ul class="nav nav-tabs" role="tablist">
       <li class="active"><a href="#attributes" role="tab" data-toggle="tab">Attributes</a></li>
@@ -30,8 +30,37 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-      <div class="tab-pane active" id="attributes">attributes</div>
-      <div class="tab-pane" id="operations">operations</div>
+      <div class="tab-pane active" id="attributes">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Description</th>
+              <th>Value</th>
+              <th>Type</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="attribute in mbean.attributes">
+              <td>{{attribute.name}}</td>
+              <td>{{attribute.description}}</td>
+              <td>{{attribute.value}}</td>
+              <td>{{attribute.type}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="tab-pane" id="operations">
+        <ul>
+          <li ng-repeat="operation in mbean.operations">
+            <form class="form-inline" id="{{operation.name}}">
+              {{operation.name}}
+              <input ng-repeat="param in operation.parameters" type="text" class="input-small" placeholder="{{param.name}}">
+              <button type="submit" class="btn btn-primary" ng-click="invoke(operation.name)">Invoke</button>
+            </form>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </div>
