add type in placeholder
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1623258 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
@@ -55,7 +55,7 @@
           <li ng-repeat="operation in mbean.operations">
             <form class="form-inline" id="{{operation.name}}">
               {{operation.name}}
-              <input ng-repeat="param in operation.parameters" type="text" class="input-small" placeholder="{{param.name}}">
+              <input ng-repeat="param in operation.parameters" type="text" class="input-small" placeholder="{{param.name}}:{{param.type}}">
               <button type="submit" class="btn btn-primary" ng-click="invoke(operation.name)">Invoke</button>
             </form>
           </li>
