better display for result
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1623640 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jmx.html
@@ -23,6 +23,8 @@
     <h1>{{mbean.objectName}}</h1>
     <h2>{{mbean.classname}}</h2>
 
+    <div id="invoke-result">{{invokeResult}}</div>
+
     <ul class="nav nav-tabs" role="tablist">
       <li class="active"><a href="#attributes" role="tab" data-toggle="tab">Attributes</a></li>
       <li><a href="#operations" role="tab" data-toggle="tab">Operations</a></li>
